--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.5",
     "djangorestframework>=3.16.1",
+    "djangorestframework-simplejwt>=5.5.1",
+    "djoser>=2.3.3",
     "mysqlclient>=2.2.7",
     "python-dotenv>=1.1.1",
 ]
