--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,8 @@ dependencies = [
     "mysqlclient>=2.2.7",
     "python-dotenv>=1.1.1",
 ]
+
+[dependency-groups]
+dev = [
+    "drf-yasg>=1.21.10",
+]
